fix overflow on display

--- a/src/component/Calculator.css
+++ b/src/component/Calculator.css
@@ -21,6 +21,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     padding: 10px;
+    overflow-x: hidden;
 }
 
 .display p {
